--- a/Semana 8/plugins/package.json
+++ b/Semana 8/plugins/package.json
@@ -18,7 +18,9 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "expo-sensors": "~14.0.1",
-    "expo-image-picker": "~16.0.3"
+    "expo-image-picker": "~16.0.3",
+    "react-native-maps": "1.18.0",
+    "expo-location": "~18.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
